--- a/node_roles.yaml
+++ b/node_roles.yaml
@@ -1,13 +1,12 @@
-fuel-plugin-rally_role:
-  # Role name
-  name: "Set here the name for the role. This name will be displayed in the Fuel web UI"
-  # Role description
-  description: "Write description for your role"
-  # If primary then during orchestration this role will be
-  # separated into primary-role and role
+rally:
+  name: 'Rally'
+  description: 'Install Rally'
   has_primary: false
-  # Assign public IP to node if true
   public_ip_required: false
-  # Weight that will be used to sort out the
-  # roles on the Fuel web UI
-  weight: 1000
+  weight: 100
+  limits:
+    max: 1
+    recommended: 1
+  conflicts:
+    - compute
+    - controller
