--- a/deployment_tasks.yaml
+++ b/deployment_tasks.yaml
@@ -1,62 +1,36 @@
 # These tasks will be merged into deployment graph. Here you
 # can specify new tasks for any roles, even built-in ones.
 
-- id: fuel-plugin-rally_role
+- id: rally
   type: group
-  role: [fuel-plugin-rally_role]
+  version: 2.0.0
+  role: [rally]
+  tasks:
+    - hiera
+    - setup_repositories
+    - fuel_pkgs
+    - globals
+    - tools
+    - logging
+    - netconfig
+    - hosts
+    - puppet-demo
+  requires: [deploy_start]
+  required_for: [deploy_end]
   parameters:
     strategy:
-      type: parallel
+      type: one_by_one
 
-- id: fuel-plugin-rally-deployment-puppet
+
+- id: puppet-demo
   type: puppet
-  role: [fuel-plugin-rally_role]
-
-# If you do not want to use task-based deployment that is introduced as experimental
-# in fuel v8.0 comment code section below this comment, uncomment two lines below it
-# and do the same for tasks below.
-
   version: 2.0.0
-  cross-depends:
-    - name: deploy_start
-  cross-depended-by:
-    - name: deploy_end
-#  requires: [deploy_start] # version 1.0.0
-#  required_for: [deploy_end]
-
+  role: [rally]
+  requires: [netconfig]
+  required_for: [deploy_end]
   parameters:
-    puppet_manifest: "deploy.pp"
-    puppet_modules: "."
-    timeout: 3600
-
-#- id: fuel-plugin-rally-post-deployment-sh
-#  type: shell
-#  role: [fuel-plugin-rally_role]
-#  version: 2.0.0
-#  cross-depends:
-#    - name: post_deployment_start
-#  cross-depended-by:
-#    - name: post_deployment_end
-# #  requires: [post_deployment_start]
-# #  required_for: [post_deployment_end]
-#  parameters:
-#    cmd: echo post_deployment_task_executed > /tmp/post_deployment
-#    retries: 3
-#    interval: 20
-#    timeout: 180
-
-#- id: fuel-plugin-rally-pre-deployment-sh
-#  type: shell
-#  role: [fuel-plugin-rally_role]
-#  version: 2.0.0
-#  cross-depends:
-#    - name: pre_deployment_start
-#  cross-depended-by:
-#    - name: pre_deployment_end
-# #  requires: [pre_deployment_start]
-# #  required_for: [pre_deployment_end]
-#  parameters:
-#    cmd: echo pre_deployment_task_executed > /tmp/pre_deployment
-#    retries: 3
-#    interval: 20
-#    timeout: 180
+    puppet_manifest: puppet/manifests/demo.pp
+    puppet_modules: puppet/modules:/etc/puppet/modules
+    timeout: 600
+  reexecute_on:
+    - deploy_changes
