--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,32 +1,37 @@
 # Plugin name
 name: fuel-plugin-rally
 # Human-readable name for your plugin
-title: Title for fuel-plugin-rally plugin
+title: Rally benchmarking tool plugin
 # Plugin version
-version: '1.0.0'
+version: '0.1.0'
 # Description
-description: Please describe your plugin here
+description: Deploy Rally benchmarking tool
 # Required fuel version
-fuel_version: ['8.0']
+fuel_version: ['8.0', '9.0']
 # Specify license of your plugin
 licenses: ['Apache License Version 2.0']
 # Specify author or company name
-authors: ['Specify author or company name']
+authors: ['Mirantis Inc.']
 # A link to the plugin's page
-homepage: 'https://github.com/openstack/fuel-plugins'
+homepage: 'https://bitbucket.org/core_st/fuel-plugin-rally'
 # Specify a group which your plugin implements, possible options:
 # network, storage, storage::cinder, storage::glance, hypervisor,
 # equipment
 groups: []
 # Change `false` to `true` if the plugin can be installed in the environment
 # after the deployment.
-is_hotpluggable: false
+is_hotpluggable: true
 
 # The plugin is compatible with releases in the list
 releases:
   - os: ubuntu
-    version: mitaka-9.0
-    mode: ['ha']
+    version: liberty-8.0
+    mode: ['ha','multinode']
+    deployment_scripts_path: deployment_scripts/
+    repository_path: repositories/ubuntu
+  - os: ubuntu
+    version: liberty-9.0
+    mode: ['ha','multinode']
     deployment_scripts_path: deployment_scripts/
     repository_path: repositories/ubuntu
 
