Add hiera yaml override file

--- a/deployment_tasks.yaml
+++ b/deployment_tasks.yaml
@@ -14,6 +14,7 @@
     - logging
     - netconfig
     - hosts
+    - rally-hiera
     - puppet-demo
   requires: [deploy_start]
   required_for: [deploy_end]
@@ -21,6 +22,23 @@
     strategy:
       type: one_by_one
 
+
+# Tasks definitions for the deployment
+######################################
+
+# This task needs to be reexecuted to adapt the configuration parameters which
+# depend on the number of nodes in the cluster
+- id: rally-hiera
+  type: puppet
+  version: 2.0.0
+  requires: [netconfig]
+  required_for: [deploy_end]
+  parameters:
+    puppet_manifest: "puppet/manifests/rally_hiera_override.pp"
+    puppet_modules: puppet/modules:/etc/puppet/modules
+    timeout: 120
+  reexecute_on:
+    - deploy_changes
 
 - id: puppet-demo
   type: puppet
