--- a/metadata.yaml
+++ b/metadata.yaml
@@ -7,7 +7,7 @@ version: '0.1.0'
 # Description
 description: Deploy Rally benchmarking tool
 # Required fuel version
-fuel_version: ['8.0', '9.0']
+fuel_version: ['7.0', '8.0', '9.0']
 # Specify license of your plugin
 licenses: ['Apache License Version 2.0']
 # Specify author or company name
@@ -25,13 +25,18 @@ is_hotpluggable: true
 # The plugin is compatible with releases in the list
 releases:
   - os: ubuntu
-    version: liberty-8.0
-    mode: ['ha','multinode']
+    version: kilo-7.0
+    mode: ['ha']
     deployment_scripts_path: deployment_scripts/
     repository_path: repositories/ubuntu
   - os: ubuntu
-    version: liberty-9.0
-    mode: ['ha','multinode']
+    version: liberty-8.0
+    mode: ['ha']
+    deployment_scripts_path: deployment_scripts/
+    repository_path: repositories/ubuntu
+  - os: ubuntu
+    version: mitaka-9.0
+    mode: ['ha']
     deployment_scripts_path: deployment_scripts/
     repository_path: repositories/ubuntu
 
