--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,7 +1,7 @@
 # Plugin name
 name: fuel-plugin-rally
 # Human-readable name for your plugin
-title: Rally benchmarking tool plugin
+title: Rally
 # Plugin version
 version: '0.1.0'
 # Description
@@ -25,7 +25,7 @@ is_hotpluggable: true
 # The plugin is compatible with releases in the list
 releases:
   - os: ubuntu
-    version: kilo-7.0
+    version: 2015.1.0-7.0
     mode: ['ha']
     deployment_scripts_path: deployment_scripts/
     repository_path: repositories/ubuntu
