--- a/metadata.yaml
+++ b/metadata.yaml
@@ -7,7 +7,7 @@ version: '0.1.0'
 # Description
 description: Deploy Rally benchmarking tool
 # Required fuel version
-fuel_version: ['7.0', '8.0', '9.0']
+fuel_version: ['7.0']
 # Specify license of your plugin
 licenses: ['Apache License Version 2.0']
 # Specify author or company name
@@ -26,16 +26,6 @@ is_hotpluggable: true
 releases:
   - os: ubuntu
     version: 2015.1.0-7.0
-    mode: ['ha']
-    deployment_scripts_path: deployment_scripts/
-    repository_path: repositories/ubuntu
-  - os: ubuntu
-    version: liberty-8.0
-    mode: ['ha']
-    deployment_scripts_path: deployment_scripts/
-    repository_path: repositories/ubuntu
-  - os: ubuntu
-    version: mitaka-9.0
     mode: ['ha']
     deployment_scripts_path: deployment_scripts/
     repository_path: repositories/ubuntu
